# agent-learning

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  RUNBOOK.md  docker-compose.yml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202606250001_create_mvp_core_tables.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: bootstrap.py  config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  chat.py  document.py  knowledge_base.py  log.py  mixins.py  model_provider.py  prompt.py  user.py
backend/app/modules/auth/api/: router.py
backend/app/modules/documents/api/: router.py
backend/app/modules/knowledge_bases/api/: router.py
backend/app/modules/logs/api/: router.py
backend/app/modules/model_providers/api/: router.py
backend/app/modules/prompts/api/: router.py
backend/app/modules/rag/api/: router.py
backend/app/repositories/: __init__.py  base.py  knowledge_bases.py  users.py
backend/tests/: conftest.py  test_auth.py  test_database.py  test_health.py  test_knowledge_bases.py  test_model_providers.py
database/: README.md
docs/architecture/: system-overview.md
docs/plans/: frontend-web-mvp-execution.md  m1-project-skeleton.md  next-stage-implementation-steps.md  stage-3-hand-coding-guide.md  stage-4-document-upload-todos.md
frontend/: package-lock.json  package.json  tailwind.config.ts
(+27 files in other folders)
